--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f1b17f">  <td>24/02/03 22:53:16</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4e423aa2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1513867245</td>   <td></td> </tr>
-<tr bgcolor="f1b17f">  <td>24/02/03 22:53:25</td>   <td>9081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4e423aa2]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1513867245</td>   <td></td> </tr>
-<tr bgcolor="61f9b0">  <td>24/02/03 22:53:26</td>   <td>10016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4e423aa2]">vaidateHomePageTitle</td> 
-  <td>main@1513867245</td>   <td></td> </tr>
-<tr bgcolor="f1b17f">  <td>24/02/03 22:53:26</td>   <td>10183</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4e423aa2]">&lt;&lt;BreakDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1513867245</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:21</td>   <td>-12961</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:32</td>   <td>-2030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:34</td>   <td>170</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&lt;&lt;BreakDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>24/02/11 07:39:34</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">loginPageTest</td> 
+  <td>main@1371957475</td>   <td></td> </tr>
 </table>
