--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:34</td>   <td>0</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&lt;&lt;BreakDown</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 14:56:11</td>   <td>0</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;BreakDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:34</td>   <td>-170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&lt;&lt;logOut</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 14:56:11</td>   <td>-52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;logOut</td> 
 <td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>24/02/11 07:39:34</td>   <td>-187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">loginPageTest</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 14:56:09</td>   <td>-2035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/14 14:55:59</td>   <td>-12024</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>24/02/14 14:56:11</td>   <td>-73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">vaidateHomePageTitle</td> 
   <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:32</td>   <td>-2200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/11 07:39:21</td>   <td>-13131</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4fb3ee4e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
 </table>
