--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaa1f2">  <td>24/02/14 15:13:45</td>   <td>0</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;BreakDown</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 15:20:28</td>   <td>0</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;BreakDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/14 15:13:45</td>   <td>-60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;logOut</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 15:20:28</td>   <td>-98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="aaa1f2">  <td>24/02/14 15:20:27</td>   <td>-1371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;loginTest</td> 
 <td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/14 15:13:43</td>   <td>-1895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="aaa1f2">  <td>24/02/14 15:13:34</td>   <td>-10326</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;setUp</td> 
+<tr bgcolor="aaa1f2">  <td>24/02/14 15:20:16</td>   <td>-12015</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1371957475</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>24/02/14 15:13:45</td>   <td>-76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">vaidateHomePageTitle</td> 
+<tr bgcolor="7194ba">  <td>24/02/14 15:20:28</td>   <td>-104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@4fb3ee4e]">vaidateHomePageTitle</td> 
   <td>main@1371957475</td>   <td></td> </tr>
 </table>
