adding the screenshot chnages

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@434a63ab]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:54</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@6e0f5f7f]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:55</td>   <td>1193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@6e0f5f7f]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:39</td>   <td>-14935</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.HomePageTest@c88a337]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:55</td>   <td>1193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2805d709]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:53</td>   <td>-1132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.HomePageTest@c88a337]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:53</td>   <td>-1129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@434a63ab]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="977460">  <td>24/02/15 11:33:53</td>   <td>-1131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SpiceHolidayPageTest.f()[pri:0, instance:com.spicejet.qa.test.SpiceHolidayPageTest@37d4349f]">f</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:51</td>   <td>-2925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@c88a337]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>24/02/15 11:33:54</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaxiPageTest.TGG()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@434a63ab]">TGG</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="e5f797">  <td>24/02/15 11:33:55</td>   <td>1193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@6e0f5f7f]">loginPageTest</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:57</td>   <td>2469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2805d709]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="677d7f">  <td>24/02/15 11:33:57</td>   <td>2454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CargoPageTest.cargotest()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2805d709]">cargotest</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>24/02/15 11:33:57</td>   <td>2471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardPageTest.f()[pri:0, instance:com.spicejet.qa.test.GiftCardPageTest@3ee37e5a]">f</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>24/02/15 11:33:53</td>   <td>-1143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@c88a337]">vaidateHomePageTitle</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="7b6572">  <td>24/02/15 11:33:57</td>   <td>2575</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.HomePageTest@c88a337]">&lt;&lt;BreakDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
+  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>149</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;BreakDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
+  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
+  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
+  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:38</td>   <td>-16720</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
 </table>
