adding the git changes

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,32 +1,54 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
-  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>149</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;BreakDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
-  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
-  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>24/02/19 12:02:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">loginPageTest</td> 
-  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:38</td>   <td>-16720</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&gt;&gt;loginTest</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>24/02/19 12:02:55</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@4f2b503c]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@580673921</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@3ee37e5a]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:11</td>   <td>1228</td> <td title="&lt;&lt;TestBase.BreakDown()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&lt;&lt;BreakDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>24/02/19 16:43:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaxiPageTest.TGG()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@3ee37e5a]">TGG</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 16:43:08</td>   <td>-2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">loginPageTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="b7cd72">  <td>24/02/19 16:43:09</td>   <td>-1131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SpiceHolidayPageTest.f()[pri:0, instance:com.spicejet.qa.test.SpiceHolidayPageTest@2805d709]">f</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:11</td>   <td>1108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2ea41516]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 16:43:08</td>   <td>-2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">loginPageTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>24/02/19 16:43:11</td>   <td>1108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CargoPageTest.cargotest()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2ea41516]">cargotest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:09</td>   <td>-1131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.HomePageTest@434a63ab]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.logOut()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:42:55</td>   <td>-15129</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 16:43:08</td>   <td>-2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">loginPageTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:09</td>   <td>-1131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.TaxiPageTest@3ee37e5a]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>24/02/19 16:43:08</td>   <td>-2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">loginPageTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>24/02/19 16:43:09</td>   <td>-1135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.vaidateHomePageTitle()[pri:0, instance:com.spicejet.qa.test.HomePageTest@434a63ab]">vaidateHomePageTitle</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:10</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.CargoPageTest@2ea41516]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>24/02/19 16:43:11</td>   <td>1108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardPageTest.f()[pri:0, instance:com.spicejet.qa.test.GiftCardPageTest@3a44431a]">f</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.HomePageTest@434a63ab]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/02/19 16:43:08</td>   <td>-2736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginTest()[pri:0, instance:com.spicejet.qa.test.LoginPageTest@485966cc]">&gt;&gt;loginTest</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
 </table>
